# Stellarvault

./: .gitignore  README.md
.github/workflows/: ci.yml
circuits/: confidentialTransfer.circom  merkle.circom  package-lock.json  package.json  test-ct.mjs  test.mjs  voteApproval.circom
deployments/testnet/: addresses.txt
docs/: A_PLAN_ROADMAP.md  README.md  SUBMISSION.md
docs/contracts/: VAULT_CONTRACT.md
docs/deployment/: DEPLOY.md
docs/frontend/: DESIGN_BRIEF.md  FRONTEND.md
docs/hackathon/: HACKATHON_PLAN.md
docs/nethermind/: INTEGRATION.md
docs/zk-circuits/: CIRCUITS.md
shield-pool/: Cargo.toml
shield-pool/src/: lib.rs  test.rs
shield-pool/test_snapshots/test/: test_deposit_then_withdraw.1.json  test_double_spend_panics.1.json  test_empty_proof_panics.1.json
stellar-vault/: Cargo.toml
stellar-vault/src/: lib.rs  test.rs  types.rs  vault.rs
stellar-vault/test_snapshots/test/: test_create_vault_and_query.1.json  test_double_approve_panics.1.json  test_non_signer_approve_panics.1.json  test_propose_and_approve_counts.1.json  test_transparent_execute_transfers_tokens.1.json  test_zk_double_vote_same_nullifier_panics.1.json
vault-factory/: Cargo.toml
vault-factory/src/: lib.rs
vault-instance/: Cargo.toml
vault-instance/src/: lib.rs  test.rs
vault-instance/test_snapshots/test/: test_create_and_query.1.json  test_non_signer_approve_panics.1.json  (+5 more)
web/: .env.production  package-lock.json  package.json  realzk.mjs
web/app/: globals.css  layout.tsx  page.tsx  shield.tsx
web/lib/: contract.ts  prover.ts  shieldProver.ts  stellar.ts
(+6 files in other folders)
